--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ cmake_minimum_required(VERSION 3.30)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_STANDARD 17)
 
-# Check if initial config has been done already
+# FIRST-RUN CHECK
+######################################################################
 if(NOT DEFINED CACHE{FIRST_RUN})
   set(FIRST_RUN TRUE CACHE BOOL "Indicates whether this is the initial (config) CMake run")
   find_program(HAVE_GIT git)   # See if we've got git and cache the result
@@ -14,19 +15,37 @@ if(NOT DEFINED CACHE{FIRST_RUN})
   # TODO: have these print only if verbose
   # message(STATUS "FIRST_RUN: ${FIRST_RUN}")
   # message("HAVE_GIT: ${HAVE_GIT}")
-  message(NOTICE "FIRST RUN: Platform: ${PRETTY_NAME}")
-
+  # message(NOTICE "FIRST RUN: Platform: ${PRETTY_NAME}")
 else()
   set(FIRST_RUN FALSE)
   # message(NOTICE "FIRST_RUN: ${FIRST_RUN}")
 endif()
 
 
+# BUILD TYPE SHENANIGANS
+######################################################################
+# Cache build type from env (-DBUILD_TYPE). Defaults to debug build
+# if undefined.
+set(BUILD_TYPE ENV${BUILD_TYPE} CACHE STRING "Currently selected build type.")
+if(NOT $ENV{BUILD_TYPE})
+  # TODO: only output if verbose(?)
+  message(WARNING "BUILD_TYPE undefined: defaulting to DEBUG build")
+  set(BUILD_TYPE "Debug")
+endif()
+
+message(NOTICE "Build type set: $CACHE{BUILD_TYPE}")
+
+# Supported build types
+# set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Supported build types" FORCE)
+# set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Supported build types")
+
+
+# PROJECT NAME
+######################################################################
 # Set project name to match git repo name, if the project is one, which
 # it should be, assuming it was cloned from the template. Only done at
-# first run.
+# first run. Default used if no repo was found.
 if((FIRST_RUN) AND (HAVE_GIT) AND (EXISTS "${CMAKE_SOURCE_DIR}/.git"))
-
   set(REPO_NAME "" CACHE STRING "Name of parent repo")
   set(REPO_PATH "" CACHE PATH "Path to parent repo")
   message(NOTICE "Setting project name to match repo")
@@ -40,15 +59,14 @@ if((FIRST_RUN) AND (HAVE_GIT) AND (EXISTS "${CMAKE_SOURCE_DIR}/.git"))
   project(${REPO_NAME})
 endif()
 
-# Set project name to a default value if no repo found.
 if((FIRST_RUN) AND (NOT EXISTS "${CMAKE_SOURCE_DIR}/.git"))
   project("cmake_cpp_msvc_starter_thing")
   set(REPO_NAME "cmake_cpp_msvc_starter_thing")
   message(WARNING "Project doesn't appear to be a git repo. Project name defaulted to `cmake_cpp_msvc_starter_thing`")
 endif()
 
-######################################################################
-# JUSTFILE GEN                                                       #
+
+# JUSTFILE GEN
 ######################################################################
 set(JUSTFILE_PATH ${CMAKE_SOURCE_DIR}/justfile)
 if( (FIRST_RUN) AND (NOT EXISTS ${CMAKE_BINARY_DIR}/build.justfile) )
@@ -57,8 +75,8 @@ if( (FIRST_RUN) AND (NOT EXISTS ${CMAKE_BINARY_DIR}/build.justfile) )
   configure_file(${TEMPLATE_JUSTFILE} ${CMAKE_BINARY_DIR}/build.just @ONLY)
 endif()
 
-######################################################################
-# VCPKG                                                              #
+
+# VCPKG
 ######################################################################
 if (WIN32)
   set(VCPKG_CMAKEFILE C:/vcpkg/scripts/buildsystems/vcpkg.cmake)
@@ -74,6 +92,9 @@ if (WIN32)
   endif()
 endif (WIN32)
 
+
+# COMPILER FLAGS
+######################################################################
 if (LINUX)
   set(VCPKG_CMAKEFILE_LINUX "$ENV{HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake")
   if(EXISTS ${VCPKG_CMAKEFILE_LINUX})
@@ -95,13 +116,13 @@ else()
     add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-######################################################################
-# EXTERNAL LIBS/CONTENT                                              #
+
+# EXTERNAL LIBS/CONTENT
 ######################################################################
 
 
-######################################################################
-# SOURCE GLOBS                                                       #
+
+# SOURCE GLOBS
 ######################################################################
 set(SRC)
 file(GLOB SRC
@@ -109,23 +130,39 @@ file(GLOB SRC
   src/*.c src/*.cpp
 )
 
-######################################################################
-# TARGETS & LINKS                                                    #
+
+# TARGETS & LINKS
 ######################################################################
 if(LINK_STATIC)
   add_executable(${PROJECT_NAME}-static ${SRC})
-  target_compile_options(${PROJECT_NAME}-static
-    PRIVATE
-    "/W3" "/Zi" "/cgthreads8")
+  if(BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(${PROJECT_NAME}-static
+      PRIVATE
+      "/W3" "/Zi" "/cgthreads8")
+    set(OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/Debug")
+  elseif(BUILD_TYPE STREQUAL "Release")
+    target_compile_options(${PROJECT_NAME}-static
+      PRIVATE
+      "/W3" "/cgthreads8")
+    set(OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/Release")
+  endif()
 else()
   add_executable(${PROJECT_NAME}-dyn ${SRC})
-  target_compile_options(${PROJECT_NAME}-dyn
-    PRIVATE
-    "/W3" "/Zi" "/cgthreads8")
+  if(BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(${PROJECT_NAME}-dyn
+      PRIVATE
+      "/W3" "/Zi" "/cgthreads8")
+    set(OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/Debug")
+  elseif(BUILD_TYPE STREQUAL "Release")
+    target_compile_options(${PROJECT_NAME}-dyn
+      PRIVATE
+      "/W3" "/cgthreads8")
+    set(OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/Release")
+  endif()
 endif()
 
-######################################################################
-# TARGET INCLUDES                                                    #
+
+# TARGET INCLUDES
 ######################################################################
 # find_package(fmt CONFIG REQUIRED)
 
@@ -138,4 +175,3 @@ endif()
 # )
 
 # TODO: Conditionalise
-set(OUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/Debug")
