--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # TODO: README.md (maybe also have CM template it on first run?)
 # TODO: Opts and things for Linux build
 #
-cmake_minimum_required(VERSION 3.30)
+cmake_minimum_required(VERSION 3.25)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Generate compile_commands.json (no effect with msvc)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -78,14 +78,18 @@ endif()
 # JUSTFILE GEN
 ################################################################################
 # The result is written to `build.just` to avoid having to touch the root
-# justfile, which instead just includes `build.just` after config. This has a
-# bonus UX benefit in not showing the build-stage recipes prior to actually
-# configuring the build system.
-################################################################################
+# justfile, which includes a `build.just` for the host platform.
+# This has a bonus UX benefit in not showing the build-stage recipes prior to
+# actually configuring the build system.
 set(JUSTFILE_PATH ${CMAKE_SOURCE_DIR}/justfile)
+# TODO: Platform check, then configure linux/windows build justfile
 if(NOT EXISTS ${CMAKE_BINARY_DIR}/build.justfile)
+  if (WIN32)
+    set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/src/template_windows.justfile)
+  elseif ((LINUX) OR (UNIX))
+    set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/src/template_linux.justfile)
+  endif()
   message("Generating build-justfile from template")
-  set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/src/template.justfile)
   configure_file(${TEMPLATE_JUSTFILE} ${CMAKE_BINARY_DIR}/build.just @ONLY)
 endif()
 
