Add dir for support scriptery

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,9 +84,9 @@ endif()
 set(JUSTFILE_PATH ${CMAKE_SOURCE_DIR}/justfile)
 if(NOT EXISTS ${CMAKE_BINARY_DIR}/build.justfile)
   if (WIN32)
-    set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/src/build_windows.just)
+    set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/.support_scripts/build_windows.just)
   elseif ((LINUX) OR (UNIX))
-    set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/src/build_linux.just)
+    set(TEMPLATE_JUSTFILE ${CMAKE_SOURCE_DIR}/.support_scripts/build_linux.just)
   endif()
   message("Generating build-justfile from template")
   configure_file(${TEMPLATE_JUSTFILE} ${CMAKE_BINARY_DIR}/build.just @ONLY)
